--- a/index.html
+++ b/index.html
@@ -176,18 +176,22 @@
 
 
         <!-- Breads -->
-        <div class="accordion-item">
-          <button class="accordion-header">Breads</button>
-          <div class="accordion-content">
-            <p>Delivered fresh daily from local bakeries.</p>
-            <ul>
-              <li>Italian hero loaves</li>
-              <li>Round Italian bread</li>
-              <li>Semolina loaves</li>
-              <li>Rolls & specialty breads (seasonal)</li>
-            </ul>
-          </div>
-        </div>
+        <div class="accordion-content">
+  <p>Fresh breads delivered daily from trusted local bakeries — perfect for sandwiches, catering, or your table at home.</p>
+
+  <ul>
+    <li><strong>Italian Loaves:</strong> Classic crusty Italian bread, perfect for heroes or slicing.</li>
+
+    <li><strong>Panella:</strong> Soft, airy Sicilian-style round bread — great for sandwiches or table bread.</li>
+
+    <li><strong>Football Rolls:</strong> Ideal for hearty sandwiches with plenty of fillings.</li>
+
+    <li><strong>Dinner Rolls:</strong> Soft, fresh rolls — perfect for meals, parties, or catering trays.</li>
+
+    <li><strong>Focaccia (Small & Large):</strong> Fresh, fluffy focaccia baked with authentic Italian flavor.</li>
+  </ul>
+</div>
+
 
         <!-- Deli Meats -->
         <div class="accordion-item">
