--- a/index.html
+++ b/index.html
@@ -134,64 +134,48 @@
         </div>
 
         <!-- Imported Cheeses -->
-        <div class="accordion-content">
-  <p>Hand‑selected Italian and international cheeses, sliced to order or sold by the piece.</p>
+ <div class="accordion-item">
+  <button class="accordion-header">Imported Cheeses</button>
+  <div class="accordion-content">
+    <p>Hand‑selected Italian and international cheeses, sliced to order or sold by the piece.</p>
 
-  <ul>
-    <li><strong>Parmigiano Reggiano:</strong> The king of cheeses — aged, nutty, and perfect for grating or snacking.</li>
-
-    <li><strong>Auricchio Sharp Provolone:</strong> Bold, tangy, and aged to perfection. A classic Italian staple.</li>
-
-    <li><strong>Moliterno al Tartufo (Black Truffle):</strong> Rich sheep’s milk cheese infused with earthy black truffles.</li>
-
-    <li><strong>Imported Gorgonzola:</strong> Creamy blue cheese with a sharp, tangy finish.</li>
-
-    <li><strong>Italian Fontina:</strong> Semi‑soft, buttery, and perfect for melting.</li>
-
-    <li><strong>Fiore di Sardegna (Sheep’s Milk):</strong> A robust, aged cheese from Sardinia with a deep, savory flavor.</li>
-
-    <li><strong>Rocinante (Aged Goat Cheese):</strong> Spanish goat cheese with a firm texture and nutty profile.</li>
-
-    <li><strong>Ricotta Salata:</strong> Dry, crumbly ricotta — ideal for grating over pasta or salads.</li>
-
-    <li><strong>Manchego (12 Month):</strong> Spanish sheep’s milk cheese with a firm bite and sweet finish.</li>
-
-    <li><strong>Smoked Gouda:</strong> Creamy Dutch cheese with a smoky aroma and smooth texture.</li>
-
-    <li><strong>Greek Feta:</strong> Brined and crumbly, perfect for Mediterranean dishes.</li>
-
-    <li><strong>Genuine Pecorino Romano (Black Label):</strong> Sharp, salty, and aged — a true Roman classic.</li>
-
-    <li><strong>Brie with Black Truffles (Perigord Region):</strong> French delicacy with earthy truffle notes and creamy texture.</li>
-
-    <li><strong>Fresh Homemade Mozzarella & Bocconcini:</strong> Made daily in‑house — soft, milky, and irresistible.</li>
-
-    <li><strong>Homemade Scamorza:</strong> Mild and semi‑soft, perfect for slicing or melting.</li>
-
-    <li><strong>Smoked Scamorza:</strong> A smoky twist on the classic, with rich flavor.</li>
-
-    <li><strong>Burrata:</strong> Cream‑filled mozzarella pouch — decadent and fresh.</li>
-  </ul>
+    <ul>
+      <li><strong>Parmigiano Reggiano:</strong> The king of cheeses — aged, nutty, and perfect for grating or snacking.</li>
+      <li><strong>Auricchio Sharp Provolone:</strong> Bold, tangy, and aged to perfection. A classic Italian staple.</li>
+      <li><strong>Moliterno al Tartufo (Black Truffle):</strong> Rich sheep’s milk cheese infused with earthy black truffles.</li>
+      <li><strong>Imported Gorgonzola:</strong> Creamy blue cheese with a sharp, tangy finish.</li>
+      <li><strong>Italian Fontina:</strong> Semi‑soft, buttery, and perfect for melting.</li>
+      <li><strong>Fiore di Sardegna (Sheep’s Milk):</strong> A robust, aged cheese from Sardinia with a deep, savory flavor.</li>
+      <li><strong>Rocinante (Aged Goat Cheese):</strong> Spanish goat cheese with a firm texture and nutty profile.</li>
+      <li><strong>Ricotta Salata:</strong> Dry, crumbly ricotta — ideal for grating over pasta or salads.</li>
+      <li><strong>Manchego (12 Month):</strong> Spanish sheep’s milk cheese with a firm bite and sweet finish.</li>
+      <li><strong>Smoked Gouda:</strong> Creamy Dutch cheese with a smoky aroma and smooth texture.</li>
+      <li><strong>Greek Feta:</strong> Brined and crumbly, perfect for Mediterranean dishes.</li>
+      <li><strong>Genuine Pecorino Romano (Black Label):</strong> Sharp, salty, and aged — a true Roman classic.</li>
+      <li><strong>Brie with Black Truffles (Perigord Region):</strong> French delicacy with earthy truffle notes and creamy texture.</li>
+      <li><strong>Fresh Homemade Mozzarella & Bocconcini:</strong> Made daily in‑house — soft, milky, and irresistible.</li>
+      <li><strong>Homemade Scamorza:</strong> Mild and semi‑soft, perfect for slicing or melting.</li>
+      <li><strong>Smoked Scamorza:</strong> A smoky twist on the classic, with rich flavor.</li>
+      <li><strong>Burrata:</strong> Cream‑filled mozzarella pouch — decadent and fresh.</li>
+    </ul>
+  </div>
 </div>
-
 
         <!-- Breads -->
-        <div class="accordion-content">
-  <p>Fresh breads delivered daily from trusted local bakeries — perfect for sandwiches, catering, or your table at home.</p>
+<div class="accordion-item">
+  <button class="accordion-header">Breads</button>
+  <div class="accordion-content">
+    <p>Fresh breads delivered daily from trusted local bakeries — perfect for sandwiches, catering, or your table at home.</p>
 
-  <ul>
-    <li><strong>Italian Loaves:</strong> Classic crusty Italian bread, perfect for heroes or slicing.</li>
-
-    <li><strong>Panella:</strong> Soft, airy Sicilian-style round bread — great for sandwiches or table bread.</li>
-
-    <li><strong>Football Rolls:</strong> Ideal for hearty sandwiches with plenty of fillings.</li>
-
-    <li><strong>Dinner Rolls:</strong> Soft, fresh rolls — perfect for meals, parties, or catering trays.</li>
-
-    <li><strong>Focaccia (Small & Large):</strong> Fresh, fluffy focaccia baked with authentic Italian flavor.</li>
-  </ul>
+    <ul>
+      <li><strong>Italian Loaves:</strong> Classic crusty Italian bread, perfect for heroes or slicing.</li>
+      <li><strong>Panella:</strong> Soft, airy Sicilian-style round bread — great for sandwiches or table bread.</li>
+      <li><strong>Football Rolls:</strong> Ideal for hearty sandwiches with plenty of fillings.</li>
+      <li><strong>Dinner Rolls:</strong> Soft, fresh rolls — perfect for meals, parties, or catering trays.</li>
+      <li><strong>Focaccia (Small & Large):</strong> Fresh, fluffy focaccia baked with authentic Italian flavor.</li>
+    </ul>
+  </div>
 </div>
-
 
         <!-- Deli Meats -->
         <div class="accordion-item">
@@ -300,14 +284,14 @@
     <!-- Full-width map -->
     <div style="width:100%;border-top:1px solid rgba(0,0,0,0.08);border-bottom:1px solid rgba(0,0,0,0.08);">
       <iframe
-        width="100%"
-        height="350"
-        style="border:0"
-        loading="lazy"
-        allowfullscreen
-        referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps?q=Andrea+Salumeria,247+Central+Ave,Jersey+City,NJ&output=embed">
-      </iframe>
+  width="100%"
+  height="350"
+  style="border:0"
+  loading="lazy"
+  allowfullscreen
+  referrerpolicy="no-referrer-when-downgrade"
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.628764820538!2d-74.0511387!3d40.7434396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2574048b7dc4d%3A0x61689fe0e35ef8a5!2sAndrea%20Salumeria!5e0!3m2!1sen!2sus!4v1700000000000">
+</iframe>
     </div>
 
     <div class="container" style="margin-top:1rem;">
