--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Andrea Salumeria">
   <meta property="og:description" content="Fine Italian Deli & Grocery serving Jersey City since 1975.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="photos/gallery/footerhero1.jpg">
+  <meta property="og:image" content="photos/logo/new-rustic-logo.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
@@ -133,7 +133,7 @@
           </div>
         </div>
 
-        <!-- Imported Cheeses -->
+  <!-- Imported Cheeses -->
  <div class="accordion-item">
   <button class="accordion-header">Imported Cheeses</button>
   <div class="accordion-content">
