--- a/index.html
+++ b/index.html
@@ -58,32 +58,25 @@
 <main>
 
   <!-- HERO -->
-  <section id="home" class="hero">
-    <div class="container hero-inner">
-      <div>
-        <div class="hero-eyebrow">Since 1975 • Jersey City</div>
-        <h1 class="hero-title">
-          Old‑world Italian deli <span>made fresh</span> every day.
-        </h1>
-        <p class="hero-subtitle">
-          Welcome to Andrea Salumeria — a family‑owned Italian deli and grocery known for homemade mozzarella,
-          famous sandwiches, imported cheeses, and nearly fifty years of neighborhood hospitality.
-        </p>
+  <section class="hero">
+  <div class="hero-inner">
+    <div class="hero-eyebrow">SINCE 1975 • JERSEY CITY</div>
+    <h1 class="hero-title">Old-world Italian deli, fresh every day.</h1>
+    <p class="hero-subtitle">
+      Welcome to Andrea Salumeria, a family-owned Italian deli and grocery known for homemade mozzarella, Italian sandwiches, imported goods, and nearly fifty years of neighborhood hospitality.
+    </p>
 
-        <div class="hero-meta">
-          <div class="pill pill--primary">Fine Italian Deli & Grocery</div>
-          <div class="pill">Homemade Mozzarella Daily</div>
-        </div>
+    <div class="pill-group">
+      <span class="pill pill--primary">Fine Italian Deli & Grocery</span>
+      <span class="pill">Homemade Mozzarella Daily</span>
+    </div>
 
-        <div class="hero-actions">
-          <button class="btn btn-primary" onclick="document.getElementById('menu').scrollIntoView({behavior:'smooth'})">
-            View Menu
-          </button>
-          <button class="btn btn-ghost" onclick="document.getElementById('about').scrollIntoView({behavior:'smooth'})">
-            Our Story
-          </button>
-        </div>
-      </div>
+    <div class="hero-actions">
+      <button class="btn btn-primary">View Menu</button>
+      <button class="btn btn-ghost">Our Story</button>
+    </div>
+  </div>
+</section>
 
   <!-- OUR STORY / ABOUT -->
   <section id="about">
