--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Andrea's Salumeria | Fine Italian Deli & Grocer</title>
+  <title>Andrea Salumeria | Fine Italian Deli & Grocery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Google Fonts -->
@@ -750,11 +750,11 @@
       <div>
         <div class="hero-eyebrow">Since 1975 • Jersey City</div>
         <h1 class="hero-title">
-          Old‑world Italian deli <span>made fresh</span> every day.
+          Welcome to Andrea Salumeria!<span>Fresh mozzarella made fresh</span> every day.
         </h1>
         <p class="hero-subtitle">
           Compact Italian market &amp; deli offering meats, cheeses, sandwiches &amp; more since 1975.
-          Welcome to Andrea's Salumeria — a family‑owned Italian deli and grocer known for homemade mozzarella,
+          Welcome to Andrea Salumeria — a family‑owned Italian deli and grocery known for homemade mozzarella,
           famous sandwiches, and nearly fifty years of neighborhood hospitality.
         </p>
         <div class="hero-meta">
