--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         src="photos/logo/new-rustic-logo.png" 
         alt="Andrea's Salumeria Logo" 
         class="site-logo"
-        style="height: 55px; width: auto;"
+        style="height: 90px; width: auto;"
       >
 
       <div>
@@ -1182,7 +1182,7 @@
           <div class="about-accent">Family‑owned &amp; operated • Since 1975</div>
           <div class="about-text">
             <p>
-              Welcome to Andrea's Salumeria, a cherished family‑owned and operated business proudly serving our
+              Welcome to Andrea Salumeria, a cherished family‑owned and operated business proudly serving our
               community since 1975. For nearly five decades, we have been dedicated to providing authentic Italian
               deli meats, cheeses, and specialties, upholding a tradition of quality and passion passed down
               through generations.
@@ -1197,13 +1197,13 @@
         </div>
 
         <aside class="about-card">
-          <h3 class="menu-section-title">What makes Andrea’s special</h3>
+          <h3 class="menu-section-title">What makes Andrea special</h3>
           <ul class="menu-items mt-small">
-            <li>Nearly 50 years serving our neighborhood</li>
-            <li>Homemade mozzarella crafted in‑house</li>
-            <li>Classic Italian sandwiches and daily specials</li>
-            <li>Fine deli meats, cheeses, and imported groceries</li>
-            <li>Catering available for gatherings and events</li>
+            <li> • Nearly 50 years serving our neighborhood</li>
+            <li> • Homemade mozzarella crafted in‑house</li>
+            <li> • Classic Italian sandwiches and daily specials</li>
+            <li> • Fine deli meats, cheeses, and imported groceries</li>
+            <li> • Catering available for gatherings and events</li>
           </ul>
           <div class="about-meta">
             Step inside and experience the feel of a traditional Italian salumeria — no shortcuts, just real food.
@@ -1225,7 +1225,7 @@
         <div>
           <div class="info-label">Address</div>
           <div class="info-value">
-            Andrea's Salumeria<br>
+            Andrea Salumeria<br>
             247 Central Ave <br>
             Jersey City, NJ 07307
           </div>
@@ -1238,10 +1238,7 @@
 
         <div>
           <div class="info-label">Online</div>
-          <div class="info-value">
-            Instagram: @andreas_247central<br>
-            Yelp: Andrea Salumeria, Jersey City
-          </div>
+        </div>
 
           <div class="social-icons">
             <!-- Instagram -->
@@ -1353,9 +1350,9 @@
   <div class="container footer-inner">
     <div>© <span id="year"></span> Andrea Salumeria. All rights reserved.</div>
     <div class="footer-meta">
-      <span>Fine Italian Deli &amp; Grocer • Since 1975</span>
-      <span>Homemade Mozzarella • Famous Italian Sandwiches • Imported Specialties</span>
-    </div>
+      <span>Fine Italian Deli &amp; Grocery • Since 1975</span>
+      <span>Homemade Mozzarella • Famous Italian Sandwiches • Imported Specialties Website • Created by Sicureza Ninja</span>
+	</div>
   </div>
 </footer>
 
