--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,10 @@
 
         <div>
           <div class="info-label">Online</div>
-        </div>
+          <div class="info-value">
+            Instagram: @andreas_247central<br>
+            Yelp: Andrea Salumeria, Jersey City
+          </div>
 
           <div class="social-icons">
             <!-- Instagram -->
