--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
       <div>
         <div class="hero-eyebrow">Since 1975 • Jersey City</div>
         <h1 class="hero-title">
-          Welcome to Andrea Salumeria! <span> Fresh mozzarella made fresh</span> every day.
+          <span>Welcome to Andrea Salumeria! Fresh mozzarella made fresh</span> every day.
         </h1>
         <p class="hero-subtitle">
           Compact Italian market &amp; deli offering meats, cheeses, sandwiches &amp; more since 1975.
