--- a/index.html
+++ b/index.html
@@ -1385,9 +1385,13 @@
   let heroImages = [
     "photos/hero/prosciuttodiparma.jpg",
     "photos/hero/wassup.jpg"
-    // Add more hero images here, e.g.:
-    // "photos/hero/combo.jpg",
-    // "photos/hero/mozzarella-stretch.jpg"
+    "photos/hero/hero1.jpg",
+    "photos/hero/hero2.jpg"
+	"photos/hero/hero3.jpg"
+	"photos/hero/hero4.jpg"
+	"photos/hero/hero5.jpg"
+	"photos/hero/herotray1.jpg"
+	// Add more hero images here, e.g.:	
   ];
 
   // Shuffle heroImages array for random order
@@ -1442,10 +1446,15 @@
 
   const galleryImages = [
     "photos/gallery/homemadepestopasta.jpg"
-    // Add more gallery images here, e.g.:
-    // "photos/gallery/combo-sandwich.jpg",
-    // "photos/gallery/deli-counter.jpg",
-    // "photos/gallery/storefront.jpg"
+    "photos/gallery/footerhero1.jpg,
+	"photos/gallery/footerhero2.jpg",
+	"photos/gallery/saladtray1.jpg",
+	"photos/gallery/tray1.jpg",
+    "photos/gallery/tray2.jpg",
+    "photos/gallery/tray3.jpg",
+    "photos/gallery/tray4.jpg"
+	"photos/gallery/tray5.jpg"
+	// Add more gallery images here, e.g.:
   ];
 
   const galleryGrid = document.getElementById('gallery-grid');
