--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
     <div>© <span id="year"></span> Andrea Salumeria. All rights reserved.</div>
     <div class="footer-meta">
       <span>Fine Italian Deli &amp; Grocery • Since 1975</span>
-      <span>Homemade Mozzarella • Famous Italian Sandwiches • Imported Specialties Website • Created by Sicureza Ninja</span>
+      <span>Homemade Mozzarella • Famous Italian Sandwiches • Imported Specialties Website • Created by SICUREZZA NINJA™</span>
 	</div>
   </div>
 </footer>
