--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <!-- Replace flag with your actual logo -->
       <img 
-        src="photos/logo/new-logo-flags.png" 
+        src="photos/logo/as-icon.png" 
         alt="Andrea's Salumeria Logo" 
         class="site-logo"
         style="height: 90px; width: auto;"
